--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'Netyyyy/spring-cloud-azure-tools'
-          path: 'spring-cloud-azure-t'
+#           path: 'spring-cloud-azure-t'
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -25,7 +25,6 @@ jobs:
           mvn -N io.takari:maven:wrapper
           ./mvnw clean install -P update-matrix -DskipTests -ntp
       - run: |
-          cd spring-cloud-azure-t
           if [ ! -f "updated.json" ];then
             echo "BU存在json"
             else 
