--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.metadata.url=https://spring.io/project_metadata/
-spring.bomRanges.url=https://start.spring.io/actuator/info
+spring.initializr.actuator-info-url=https://start.spring.io/actuator/info
+spring.azure.support-metadata-url=https://raw.githubusercontent.com/Azure/azure-sdk-for-java/main/sdk/spring/spring-cloud-azure-supported-spring.json
 debug=true
