--- a/.github/workflows/matrix-spring-cloud-azure.yml
+++ b/.github/workflows/matrix-spring-cloud-azure.yml
@@ -34,7 +34,7 @@ jobs:
           if [[ -n "$(git status -s)" ]] ;then
             echo '::set-output name=updated_version::true'
             git add sdk/spring/spring-cloud-azure-supported-spring.json
-            git commit -m "Update the supported version. This commit is created by GitHub Action: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+            git commit -m "Update SpringBoot and SpringCloud versions for the compatibility test. This commit is created by GitHub Action: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
             git push "https://${{ secrets.USER }}:${{ secrets.ACCESS_TOKEN }}@github.com/${{ secrets.USER }}/azure-sdk-for-java.git"
           else
             echo "No file changes, no commits."
@@ -45,8 +45,8 @@ jobs:
         env:
           PULL_REQUEST_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           PULL_REQUEST_REPOSITORY: hui1110/azure-sdk-for-java
-          PULL_REQUEST_TITLE: "Update the supported version"
+          PULL_REQUEST_TITLE: "Update SpringBoot compatibility version"
           PULL_REQUEST_FROM_BRANCH: "${{ secrets.USER }}:matrix"
           PULL_REQUEST_BRANCH: "main"
-          PULL_REQUEST_BODY: "Update the supported version. This PR is created by GitHub Actions: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+          PULL_REQUEST_BODY: "Update SpringBoot and SpringCloud versions for the compatibility test. This PR is created by GitHub Actions: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
           PULL_REQUEST_DRAFT: true
