--- a/.github/workflows/matrix-spring-cloud-azure.yml
+++ b/.github/workflows/matrix-spring-cloud-azure.yml
@@ -21,7 +21,7 @@ jobs:
           repository: 'hui1110/azure-sdk-for-java'
           path: 'azure-sdk-for-java'
           ref: main
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN1 }}
           fetch-depth: 0
       - name: Update Springboot Compatibility Version
         id: update_springboot_compatibility_version
@@ -35,7 +35,7 @@ jobs:
             echo '::set-output name=updated_version::true'
             git add sdk/spring/spring-cloud-azure-supported-spring.json
             git commit -m "Update SpringBoot and SpringCloud versions for the compatibility test. This commit is created by GitHub Action: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
-            git push "https://${{ secrets.USER }}:${{ secrets.ACCESS_TOKEN }}@github.com/${{ secrets.USER }}/azure-sdk-for-java.git"
+            git push "https://${{ secrets.USER }}:${{ secrets.ACCESS_TOKEN1 }}@github.com/${{ secrets.USER }}/azure-sdk-for-java.git"
           else
             echo "No file changes, no commits."
           fi
@@ -43,10 +43,11 @@ jobs:
         if: ${{ steps.update_springboot_compatibility_version.outputs.updated_version == 'true' }}
         uses: vsoch/pull-request-action@master
         env:
-          PULL_REQUEST_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          PULL_REQUEST_TOKEN: ${{ secrets.ACCESS_TOKEN1 }}
           PULL_REQUEST_REPOSITORY: hui1110/azure-sdk-for-java
           PULL_REQUEST_TITLE: "Update SpringBoot compatibility version"
           PULL_REQUEST_FROM_BRANCH: "${{ secrets.USER }}:matrix"
           PULL_REQUEST_BRANCH: "main"
           PULL_REQUEST_BODY: "Update SpringBoot and SpringCloud versions for the compatibility test. This PR is created by GitHub Actions: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
           PULL_REQUEST_DRAFT: true
+          PULL_REQUEST_REVIEWERS: hui1110
