--- a/.github/workflows/update-spring-cloud-azure-support-file.yml
+++ b/.github/workflows/update-spring-cloud-azure-support-file.yml
@@ -23,19 +23,28 @@ jobs:
           ref: main
           token: ${{ secrets.ACCESS_TOKEN }}
           fetch-depth: 0
-      - name: Make Decision Based on Git Diff
-        id: make_decision_based_on_git_diff
+      - name: Make Decision Based on Git Diff and Branch Status
+        id: make_decision_based_on_git_diff_and_branch_status
         run: |
-          cd azure-sdk-for-java
-          git checkout -b update-spring-cloud-azure-support-file
-          cp -f ../spring-cloud-azure-supported-spring.json sdk/spring
-          if [[ -n "$(git status -s)" ]] ;then
-            echo '::set-output name=updated_version::true'
+          if git rev-parse --verify update-spring-cloud-azure-support-file; then
+            echo "Branch exists, cancel commit"
           else
-            echo "No file changes, no commits."
-          fi
+            cd azure-sdk-for-java
+            git checkout -b update-spring-cloud-azure-support-file
+            cp -f ../spring-cloud-azure-supported-spring.json sdk/spring
+            if [[ -n "$(git status -s)" ]]; then
+              echo '::set-output name=updated_version::true'
+            else
+              echo "No file changes, no commits."
+            fi
+      - name: Check whether branch exist
+        id: check-whether-branch-exist
+        run: |
+          if git rev-parse --verify update-spring-cloud-azure-support-file; then
+            echo "Branch exists, cancel commit"
+          else
       - name: Push Commit
-        if: ${{ steps.make_decision_based_on_git_diff.outputs.updated_version == 'true' }}
+        if: ${{ steps.make_decision_based_on_git_diff_and_branch_status.outputs.updated_version == 'true' }}
         run: |
           cd azure-sdk-for-java
           git config --global user.email github-actions@github.com
@@ -45,7 +54,7 @@ jobs:
           git push "https://${{ secrets.USER }}:${{ secrets.ACCESS_TOKEN }}@github.com/${{ secrets.USER }}/azure-sdk-for-java.git"
 
       - name: Create Pull Request
-        if: ${{ steps.make_decision_based_on_git_diff.outputs.updated_version == 'true' }}
+        if: ${{ steps.make_decision_based_on_git_diff_and_branch_status.outputs.updated_version == 'true' }}
         uses: vsoch/pull-request-action@master
         env:
           PULL_REQUEST_TOKEN: ${{ secrets.ACCESS_TOKEN }}
