--- a/.github/workflows/update-spring-cloud-azure-support-file.yml
+++ b/.github/workflows/update-spring-cloud-azure-support-file.yml
@@ -29,6 +29,7 @@ jobs:
           git config --global user.email github-actions@github.com
           git config --global user.name github-actions
           git remote add check ${{ secrets.BRANCH_REPO }}
+          git fetch check
           if [[ $(git ls-remote --heads ${{ secrets.BRANCH_REPO }} update-spring-cloud-azure-support-file | wc -l) -eq 0 ]]; then
             cd azure-sdk-for-java
             git checkout -b update-spring-cloud-azure-support-file
