add upgrade version support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.metadata.url=https://spring.io/project_metadata/
 spring.initializr.actuator-info-url=https://start.spring.io/actuator/info
 spring.azure.support-metadata-url=https://raw.githubusercontent.com/Azure/azure-sdk-for-java/main/sdk/spring/spring-cloud-azure-supported-spring.json
+spring.azure.current-version-url=https://raw.githubusercontent.com/Azure/azure-sdk-for-java/main/eng/versioning/external_dependencies.txt
 debug=true
