--- a/.github/workflows/update-spring-dependencies.yml
+++ b/.github/workflows/update-spring-dependencies.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'Azure/spring-cloud-azure-tools'
-      - name: Generate Version File or Not
+      - name: Generate Version File
         run: |
           mvn compile
           mvn exec:java -P github-actions -ntp -Dupdate-spring-dependencies=true
@@ -39,10 +39,6 @@ jobs:
           else
               echo "Branch exists, cancel commit"
           fi
-      - name: Update Information
-        run: |
-          echo Updaing Spring Boot Dependencies Version: ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
-          echo Updaing Spring Cloud Dependencies Version: ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
       - uses: actions/checkout@v3
         if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
         with:
@@ -51,17 +47,32 @@ jobs:
           ref: main
           token: ${{ secrets.ACCESS_TOKEN }}
           fetch-depth: 0
-      - name: Updating Versions
+      - name: Generate spring_boot_managed_external_dependencies.txt
         if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
         run: |
+          echo Updaing Spring Boot Dependencies Version: ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
+          echo Updaing Spring Cloud Dependencies Version: ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
           cd azure-sdk-for-java
           git checkout -b update-spring-dependencies
           pip install termcolor
-          pip install in_place
           python ./sdk/spring/scripts/get_spring_boot_managed_external_dependencies.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }} -c ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
+      - name: Update external_dependencies.txt
+        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        run: |
+          cd azure-sdk-for-java
+          pip install termcolor
+          pip install in_place
           python ./sdk/spring/scripts/sync_external_dependencies.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
           python ./sdk/spring/scripts/update_external_dependencies_comment.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
+      - name: Update Versions
+        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        run: |
+          cd azure-sdk-for-java
           python ./eng/versioning/update_versions.py --ut external_dependency --sr
+      - name: Update ChangeLog
+        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        run: |
+          cd azure-sdk-for-java
           python ./sdk/spring/scripts/update_changelog.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }} -c ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
       - name: Push Commit
         if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
