--- a/.github/workflows/update-spring-dependencies.yml
+++ b/.github/workflows/update-spring-dependencies.yml
@@ -28,19 +28,20 @@ jobs:
         id: confirm_whether_to_update
         run: |
           if [[ $(git ls-remote --heads ${{ secrets.BRANCH_REPO }} update-spring-dependencies | wc -l) -eq 0 ]]; then
-            if [[ ! -f '$version.txt' ]]; then
-              echo ::set-output name=update::true
-              echo ::set-output name=spring_boot_version::$(sed -n '1p' version.txt)
-              echo ::set-output name=spring_cloud_version::$(sed -n '2p' version.txt)
-              echo ::set-output name=last_version::$(sed -n '3p' $'version.txt')
+            echo "Remote branch doesn't exit"
+            if [[ ! -f '$spring-versions.txt' ]]; then
+              echo "need_update_version=true" >> $GITHUB_ENV
+              echo "spring_boot_version=$(sed -n '1p' spring-versions.txt)" >> $GITHUB_ENV
+              echo "spring_cloud_version=$(sed -n '2p' spring-versions.txt)" >> $GITHUB_ENV
+              echo "last_spring_boot_version=$(sed -n '3p' spring-versions.txt)" >> $GITHUB_ENV
             else
               echo "No new Spring Boot version, No updates!"
             fi
           else
-              echo "Branch exists, cancel commit"
+              echo "Remote branch exists, cancel commit"
           fi
       - uses: actions/checkout@v3
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         with:
           repository: 'Azure/azure-sdk-for-java'
           path: 'azure-sdk-for-java'
@@ -48,50 +49,50 @@ jobs:
           token: ${{ secrets.ACCESS_TOKEN }}
           fetch-depth: 0
       - name: Generate spring_boot_managed_external_dependencies.txt
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         run: |
-          echo Updaing Spring Boot Dependencies Version: ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
-          echo Updaing Spring Cloud Dependencies Version: ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
+          echo Updaing Spring Boot Dependencies Version: ${{ env.spring_boot_version }}
+          echo Updaing Spring Cloud Dependencies Version: ${{ env.spring_cloud_version }}
           cd azure-sdk-for-java
           git checkout -b update-spring-dependencies
           pip install termcolor
-          python ./sdk/spring/scripts/get_spring_boot_managed_external_dependencies.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }} -c ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
+          python ./sdk/spring/scripts/get_spring_boot_managed_external_dependencies.py -b ${{ env.spring_boot_version }} -c ${{ env.spring_cloud_version }}
       - name: Update external_dependencies.txt
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         run: |
           cd azure-sdk-for-java
           pip install termcolor
           pip install in_place
-          python ./sdk/spring/scripts/sync_external_dependencies.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
-          python ./sdk/spring/scripts/update_external_dependencies_comment.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}
+          python ./sdk/spring/scripts/sync_external_dependencies.py -b ${{ env.spring_boot_version }}
+          python ./sdk/spring/scripts/update_external_dependencies_comment.py -b ${{ env.spring_boot_version }}
       - name: Update Versions
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         run: |
           cd azure-sdk-for-java
           python ./eng/versioning/update_versions.py --ut external_dependency --sr
       - name: Update ChangeLog
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         run: |
           cd azure-sdk-for-java
-          python ./sdk/spring/scripts/update_changelog.py -b ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }} -c ${{ steps.confirm_whether_to_update.outputs.spring_cloud_version }}
+          python ./sdk/spring/scripts/update_changelog.py -b ${{ env.spring_boot_version }} -c ${{ env.spring_cloud_version }}
       - name: Push Commit
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         run: |
           cd azure-sdk-for-java
           git config --global user.email github-actions@github.com
           git config --global user.name github-actions
-          git rm ./sdk/spring/scripts/spring_boot_${{ steps.confirm_whether_to_update.outputs.last_version }}_managed_external_dependencies.txt
+          git rm ./sdk/spring/scripts/spring_boot_${{ env.last_spring_boot_version }}_managed_external_dependencies.txt
           git add -A
           git commit -m "Update Spring Dependencies. This commit is created by GitHub Action: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
           git push "https://${{ secrets.USER }}:${{ secrets.ACCESS_TOKEN }}@github.com/${{ secrets.USER }}/azure-sdk-for-java.git"
       - name: Create Pull Request
-        if: ${{ steps.confirm_whether_to_update.outputs.update == 'true' }}
+        if: ${{ env.need_update_version == 'true' }}
         uses: vsoch/pull-request-action@master
         env:
           PULL_REQUEST_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           PULL_REQUEST_REPOSITORY: Azure/azure-sdk-for-java
-          PULL_REQUEST_TITLE: "Update Spring Dependencies to align with Spring Boot ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}"
+          PULL_REQUEST_TITLE: "Update Spring Dependencies to align with Spring Boot ${{ env.spring_boot_version }}"
           PULL_REQUEST_FROM_BRANCH: "${{ secrets.USER }}:update-spring-dependencies"
           PULL_REQUEST_BRANCH: "main"
-          PULL_REQUEST_BODY: "Update Spring Dependencies to align with Spring Boot ${{ steps.confirm_whether_to_update.outputs.spring_boot_version }}. This PR is created by GitHub Actions: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+          PULL_REQUEST_BODY: "Update Spring Dependencies to align with Spring Boot ${{ env.spring_boot_version }}. This PR is created by GitHub Actions: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
           PULL_REQUEST_DRAFT: true
