--- a/.github/workflows/update-spring-dependencies.yml
+++ b/.github/workflows/update-spring-dependencies.yml
@@ -27,8 +27,7 @@ jobs:
         run: |
           if [[ $(git ls-remote --heads ${{ secrets.BRANCH_REPO }} update-spring-dependencies | wc -l) -eq 0 ]]; then
             echo "Remote branch doesn't exist"
-            cat spring-versions.txt
-            if [[ ! -f '$spring-versions.txt' ]]; then
+            if [[ ! -f 'spring-versions.txt' ]]; then
               echo "No new Spring Boot version, No updates!"
             else
               echo "need_update_version=true" >> $GITHUB_ENV
