--- a/.github/workflows/asa-sample-helloworld-create-release.yml
+++ b/.github/workflows/asa-sample-helloworld-create-release.yml
@@ -1,7 +1,7 @@
 # This is a GitHub action for building and creating a GitHub release for
 # Azure Spring Apps hello world sample https://github.com/spring-guides/gs-spring-boot-for-azure
 
-name: Releases
+name: ASA Hello World Releases
 
 on:
   workflow_dispatch:
@@ -14,11 +14,13 @@ on:
         description: The released jar version, such as 0.0.1.
     
 env: 
-  APP_NAME: boot-for-azure
+  APP_NAME: hello-world
   
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -37,7 +39,6 @@ jobs:
     - name: Rename the package
       run: |
         mv *.jar ${{ env.APP_NAME }}-${{ github.event.inputs.version }}.jar
-        ls 
       working-directory: ./complete/target
     - uses: ncipollo/release-action@v1
       with:
