--- a/.github/workflows/asa-sample-helloworld-docker-image.yml
+++ b/.github/workflows/asa-sample-helloworld-docker-image.yml
@@ -1,7 +1,7 @@
 # This is a GitHub action for building and publishing the docker image for 
 # Azure Spring Apps hello world sample https://github.com/spring-guides/gs-spring-boot-for-azure
 
-name: Docker Image CI
+name: ASA Hello World Docker Image CI
 
 on:
   workflow_dispatch:
