--- a/.github/workflows/update-spring-dependencies.yml
+++ b/.github/workflows/update-spring-dependencies.yml
@@ -28,6 +28,8 @@ jobs:
             echo "Remote branch doesn't exist"
             if [[ ! -f 'spring-versions.txt' ]]; then
               echo "No new Spring Boot version, No updates!"
+            elif [[ grep -q - spring-versions.txt ]]; then
+              echo "Has non-GA version, cancel update!"
             else
               echo "need_update_version=true" >> $GITHUB_ENV
               echo "spring_boot_version=$(sed -n '1p' spring-versions.txt)" >> $GITHUB_ENV
@@ -44,14 +46,14 @@ jobs:
         with:
           repository: 'Azure/azure-sdk-for-java'
           path: 'azure-sdk-for-java'
-          ref: main
+          ref: feature/spring-boot-3
           token: ${{ secrets.ACCESS_TOKEN }}
           fetch-depth: 0
       - name: Generate spring_boot_managed_external_dependencies.txt
         if: ${{ env.need_update_version == 'true' }}
         run: |
-          echo Updaing Spring Boot Dependencies Version: ${{ env.spring_boot_version }}
-          echo Updaing Spring Cloud Dependencies Version: ${{ env.spring_cloud_version }}
+          echo Updating Spring Boot Dependencies Version: ${{ env.spring_boot_version }}
+          echo Updating Spring Cloud Dependencies Version: ${{ env.spring_cloud_version }}
           cd azure-sdk-for-java
           git checkout -b update-spring-dependencies
           pip install termcolor
@@ -91,6 +93,6 @@ jobs:
           PULL_REQUEST_REPOSITORY: Azure/azure-sdk-for-java
           PULL_REQUEST_TITLE: "External dependencies upgrade - Spring Boot ${{ env.spring_boot_version }} and Spring Cloud ${{ env.spring_cloud_version }}"
           PULL_REQUEST_FROM_BRANCH: "${{ secrets.USER }}:update-spring-dependencies"
-          PULL_REQUEST_BRANCH: "main"
+          PULL_REQUEST_BRANCH: "feature/spring-boot-3"
           PULL_REQUEST_BODY: "Updates external dependencies to align with Spring Boot version [${{ env.spring_boot_version }}](https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-dependencies/${{ env.spring_boot_version }}/spring-boot-dependencies-${{ env.spring_boot_version }}.pom) from [${{ env.last_spring_boot_version }}](https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-dependencies/${{ env.last_spring_boot_version }}/spring-boot-dependencies-${{ env.last_spring_boot_version }}.pom) and Spring Cloud version [${{ env.spring_cloud_version }}](https://repo1.maven.org/maven2/org/springframework/cloud/spring-cloud-dependencies/${{ env.spring_cloud_version }}/spring-cloud-dependencies-${{ env.spring_cloud_version }}.pom) from [${{ env.last_spring_cloud_version }}](https://repo1.maven.org/maven2/org/springframework/cloud/spring-cloud-dependencies/${{ env.last_spring_cloud_version }}/spring-cloud-dependencies-${{ env.last_spring_cloud_version }}.pom).\n${{ env.pr_descriptions }}\n\nThis PR is created by GitHub Actions: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
           PULL_REQUEST_DRAFT: true
